--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_b.cshtml
@@ -1,31 +1,37 @@
-﻿<h5><strong>Respecto a la imputación relacionada a la obligación sobre la presentación del Informe de Ejecución del plan de manejo, dentro del plazo establecido.</strong></h5>
-<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
-            <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
             <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                La administrada no cumplió con la presentación del Informe de Ejecución correspondiente al periodo XX-20XX, dentro del plazo establecido en la norma.
-            </td>
-            <td style="border: 1px solid #000;">
-                Literal b) del numeral 29.1 del artículo 29, concordado con el artículo 35 del RGFFSCNCC.
-                <a style="mso-footnote-id: foot_infraccion_b" href="#_foot_infraccion_b" title="">
-                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                </a>.
+                Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
                 Literal “b” del numeral 137.1 del artículo 137 del RGFFSCNCC / Numeral 2 del Anexo 1 del RISMFFS.
                 <br /><br />
                 <i>“Incumplir con la presentación del Informe de ejecución en los plazos establecidos en el Reglamento y las normas complementarias” / “No entregar o presentar información o documentación legalmente exigible en el plazo previsto, o cuando la autoridad competente lo requiera”</i>
             </td>
+            <td style="border: 1px solid #000;">
+                La administrada no cumplió con la presentación del Informe de Ejecución correspondiente al periodo XX-20XX, dentro del plazo establecido en la norma.
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
         </tr>
     </tbody>
 </table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
+
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     {{if informe.COD_TIPO_INFORME == 1}}
     <li>
