--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_l.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Comunidades nativas/infracciones/inciso_l.cshtml
@@ -1,34 +1,37 @@
-﻿<span>
-    <table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
-        <thead>
-            <tr style="background-color: #bfbfbf;">
-                <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
-                <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
-                <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td style="border: 1px solid #000;">
-                    Movilizar los frutos, productos y sub productos con los documentos autorizados para el transporte
-                </td>
-                <td style="border: 1px solid #000;">
-                    Literales a) y r) del numeral 29.1 del artículo 29 del RGFFSCNCC
-                    <a style="mso-footnote-id: foot_infraccion_l" href="#_foot_infraccion_l" title="">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>.<br />
-                    (Indicar cláusula del TH)
-                </td>
-                <td style="border: 1px solid #000;">
-                    Literal l) del numeral 137.3 del artículo 137 del RGFFSCNCC / Numeral 26 del Anexo 1 del RISMFFS. <br /><br />
-                    <i>
-                        “Utilizar documentación otorgada o aprobada por la autoridad forestal competente para amparar la extracción, transporte, transformación, almacenamiento o comercialización de los recursos o productos forestales, extraídos sin autorización”
-                    </i>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</span>
+﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+    <thead>
+        <tr style="background-color: #bfbfbf;">
+            <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
+            <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Literal l) del numeral 137.3 del artículo 137 del RGFFSCNCC / Numeral 26 del Anexo 1 del RISMFFS. <br /><br />
+                <i>
+                    “Utilizar documentación otorgada o aprobada por la autoridad forestal competente para amparar la extracción, transporte, transformación, almacenamiento o comercialización de los recursos o productos forestales, extraídos sin autorización”
+                </i>
+            </td>
+            <td style="border: 1px solid #000;">
+                Movilizar los frutos, productos y sub productos con los documentos autorizados para el transporte
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+        </tr>
+    </tbody>
+</table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
 
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     {{if informe.COD_TIPO_INFORME == 1}}
@@ -39,7 +42,7 @@
                 <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
                 <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
                 <li>(…) XXXXXXXXXXXXXXXXXXXXX (…). (Texto original del descargo).</li>
-            </ol>            
+            </ol>
         </span>
     </li>
     <li>
