--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_b.cshtml
@@ -2,30 +2,37 @@
 <table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
-            <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
             <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Cumplir con la implementación del plan de manejo aprobado y demostrar el origen legal de los productos aprovechados
-            </td>
-            <td style="border: 1px solid #000;">
-                Literal a) y k) del numeral 43.1 del artículo 43 del RGF
-                <a style="mso-footnote-id: foot_infraccion_b" href="#_foot_infraccion_b" title="">
-                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                </a>.
+                Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
                 Literal b) del artículo 153 de la LFFS, concordado con el literal b) del artículo 44 del RGF.
                 <br /><br />
                 <i>"La extracción o movilización de recursos forestales y de fauna silvestre no autorizadas."</i>
             </td>
+            <td style="border: 1px solid #000;">
+                Cumplir con la implementación del plan de manejo aprobado y demostrar el origen legal de los productos aprovechados
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
         </tr>
     </tbody>
 </table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
+
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente la incursión en la causal de caducidad por la extracción o movilización de recursos forestales y de fauna silvestre y de fauna silvestre por un volumen de XX.XXX m<sup>3</sup> (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie).
