--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_e.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Concesiones/infracciones/inciso_e.cshtml
@@ -1,30 +1,37 @@
 ﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
-            <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
             <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Cumplir con el pago por derecho de aprovechamiento, de acuerdo al título habilitante.
-            </td>
-            <td style="border: 1px solid #000;">
-                Literal c) del numeral 43.1 del artículo 43 y el artículo 114 del RGF
-                <a style="mso-footnote-id: foot_infraccion_e" href="#_foot_infraccion_e" title="">
-                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                </a>; concordado con el numeral XX de la Cláusula XXXXXX del contrato de concesión.
+                Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
                 Literal e) del artículo 153 de la LFFS, concordado con el literal e) del artículo 44 RGF y con el numeral XX de la Cláusula XXXXX del contrato de concesión.
                 <br /><br />
                 <i>"El no pago por derecho de aprovechamiento al cual se encuentra sujeto dentro de los plazos establecidos, salvo que exista refinanciamiento, fraccionamiento o suspensión de obligaciones aprobados por la ARFFS".</i>
             </td>
+            <td style="border: 1px solid #000;">
+                Cumplir con el pago por derecho de aprovechamiento, de acuerdo al título habilitante.
+            </td>            
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
         </tr>
     </tbody>
 </table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
+
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
         Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente no contar con regente forestal para la implementación del plan de manejo forestal.
