--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_17.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_17.cshtml
@@ -1,21 +1,17 @@
 ﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
-            <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
             <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Presentar el plan de manejo y cumplir con su implementación, luego de ser aprobado.
-            </td>
-            <td style="border: 1px solid #000;">
-                Literal a) Numeral 17.1 del artículo 17 del Reglamento 019-2015-MINAGRI
-                <a style="mso-footnote-id: foot_infraccion_17" href="#_foot_infraccion_17" title="">
-                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                </a>.
+                Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
                 Numeral 17 del Cuadro de Infracciones y Sanciones en Materia de Fauna Silvestre del Anexo 2 del Reglamento de Infracciones y Sanciones:
@@ -26,9 +22,19 @@
                     causales de caducidad.”
                 </i>
             </td>
+            <td style="border: 1px solid #000;">
+                Presentar el plan de manejo y cumplir con su implementación, luego de ser aprobado.
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
         </tr>
     </tbody>
 </table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
 
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
