--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_g.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_g.cshtml
@@ -1,23 +1,17 @@
 ﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
-            <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
             <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                Demostrar el origen legal de los productos aprovechados, así como movilizar los frutos, productos y subproductos con los documentos autorizados para el transporte.
-            </td>
-            <td style="border: 1px solid #000;">
-                Literales k) y r) del numeral 43.1 del artículo 43 del RGF
-                <a style="mso-footnote-id: foot_infraccion_g_1" href="#_foot_infraccion_g_1" title="">
-                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                </a>.
-                <br />
-                (Indicar si el TH también contiene la obligación)
+                Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
                 Literal g) del numeral 207.2 del artículo 207 del RGF/ Numeral 16 del Anexo 1 del RISMFFS
@@ -26,9 +20,20 @@
                     “Incumplir con las obligaciones o condiciones establecidas en los títulos habilitantes, planes de manejo u otros actos administrativos, diferentes a las causales de caducidad”.” / “Incumplir con las obligaciones legalmente establecidas en los títulos habilitantes, planes de manejo u otros actos administrativos, diferentes a las causales de caducidad”
                 </i>
             </td>
+            <td style="border: 1px solid #000;">
+                Demostrar el origen legal de los productos aprovechados, así como movilizar los frutos, productos y subproductos con los documentos autorizados para el transporte.
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
         </tr>
     </tbody>
 </table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
+
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     {{if informe.COD_TIPO_INFORME == 1}}
     <li>
