--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Fauna/infracciones/inciso_b.cshtml
@@ -1,24 +1,17 @@
 ﻿<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
     <thead>
         <tr style="background-color: #bfbfbf;">
-            <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
             <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
             <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
         </tr>
     </thead>
     <tbody>
         <tr>
             <td style="border: 1px solid #000;">
-                El administrado no cumplió con la presentación del Informe de Ejecución correspondiente al periodo XX-20XX, dentro del plazo establecido en la norma.
-            </td>
-            <td style="border: 1px solid #000;">
-                Literal b) del numeral 17.1 del artículo 17 del reglamento 019-2015-MINAGRI
-                <a style="mso-footnote-id: foot_infraccion_b_1" href="#_foot_infraccion_b_1" title="">
-                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                </a>, concordante con el artículo 37
-                <a style="mso-footnote-id: foot_infraccion_b_2" href="#_foot_infraccion_b_2" title="">
-                    <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                </a> del RGFS.
+                Dependerá del caso concreto
             </td>
             <td style="border: 1px solid #000;">
                 b) del numeral 191.1 del artículo 191º del Reglamento para la Gestión de Fauna Silvestre, aprobado mediante Decreto Supremo N° 019-2015-MINAGRI / Numeral 2 del Anexo 2 del RISMFFS.
@@ -27,9 +20,19 @@
                     “Incumplir con la presentación del Informe de ejecución en los plazos establecidos en el Reglamento y las normas complementarias” / “No entregar o presentar información o documentación legalmente exigible en el plazo previsto, o cuando la autoridad competente lo requiera”
                 </i>
             </td>
+            <td style="border: 1px solid #000;">
+                El administrado no cumplió con la presentación del Informe de Ejecución correspondiente al periodo XX-20XX, dentro del plazo establecido en la norma.
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
         </tr>
     </tbody>
 </table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
 
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     <li>
