--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_1.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/Predios privados/infracciones/inciso_1.cshtml
@@ -1,34 +1,38 @@
-﻿<span>
-    <table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
-        <thead>
-            <tr style="background-color: #bfbfbf;">
-                <th style="text-align: center; border: 1px solid #000;">Obligación Incumplida</th>
-                <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
-                <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td style="border: 1px solid #000;">
-                    El administrado no cumplió con establecer y mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante.
-                </td>
-                <td style="border: 1px solid #000;">
-                    Literal t) del numeral 43.1 del artículo 43 del RGF
-                    <a style="mso-footnote-id: foot_infraccion_1" href="#_foot_infraccion_1" title="">
-                        <sup class=MsoFootnoteReference><span style="mso-special-character:footnote"></span></sup>
-                    </a>.<br />
-                    (Indicar cláusula del TH)
-                </td>
-                <td style="border: 1px solid #000;">
-                    Numeral 1 del Anexo 1 del RISMFFS<br /><br />
-                    <i>
-                        “No establecer o no mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante”
-                    </i>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</span>
+﻿
+<table width="580" cellpadding="4" style="border: 0; font-family: Arial; font-size: 10pt; border-collapse: collapse; line-height: 150%;">
+    <thead>
+        <tr style="background-color: #bfbfbf;">
+            <th style="text-align: center; border: 1px solid #000;">Base legal de la obligación</th>
+            <th style="text-align: center; border: 1px solid #000;">Tipo infractor</th>
+            <th style="text-align: center; border: 1px solid #000;">Conducta Imputada</th>
+            <th style="text-align: center; border: 1px solid #000;">Descargo sobre la imputación formulada</th>
+            <th style="text-align: center; border: 1px solid #000;">Información complementaria/información adicional</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Numeral 1 del Anexo 1 del RISMFFS<br /><br />
+                <i>
+                    “No establecer o no mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante”
+                </i>
+            </td>
+            <td style="border: 1px solid #000;">
+                El administrado no cumplió con establecer y mantener los linderos, hitos u otras señales que permitan identificar el área del título habilitante.
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+            <td style="border: 1px solid #000;">
+                Dependerá del caso concreto
+            </td>
+        </tr>
+    </tbody>
+</table>
+<div>Fuente: Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || '00XX-202X-OSINFOR/08.2.X'}</div>
 
 <ol class="continue" style="margin-left: ${informe.MARGIN_LEFT.OL};">
     {{if informe.COD_TIPO_INFORME == 1}}
